[package]
name = "logik"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

[lib]
name = "logik"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "bin/repl.rs"

[dependencies]
logos = "0.12.0"
clap = "2.33.0"
colored = "2.0.0"
atty = "0.2.13"
regex = "1.3.1"
lazy_static = "1.4.0"
